Preliminary auth (Google provider) and a POST api
Auth.js 5 (beta) + drizzle-orm.

- Add some debug info to index, can test Google login now.

- Use drizzle kit in local env to prepare migrations.
  It needs better-sqlite3 (choose this) or libsql.

  Remote would use d1-http driver, though didn't realy test it in this
  commit.

- Ramda added.

--- a/package.json
+++ b/package.json
@@ -11,15 +11,25 @@
     "pages:build": "pnpm next-on-pages",
     "preview": "pnpm pages:build && wrangler pages dev",
     "deploy": "pnpm pages:build && wrangler pages deploy",
-    "migrate-new": "wrangler d1 migrations create feeders",
-    "migrate-list": "wrangler d1 migrations list feeders",
-    "migrate-up": "wrangler d1 migrations apply feeders",
+    "db:tables": "pnpm wrangler d1 execute feeders --command 'PRAGMA table_list'",
+    "db:delete": "rm -rf .wrangler/state/v3/d1/miniflare-D1DatabaseObject drizzle",
+    "db:check": "LOCAL_DB_PATH=$(find .wrangler/state/v3/d1/miniflare-D1DatabaseObject -type f -name '*.sqlite' -print -quit) drizzle-kit check",
+    "db:migrate:gen": "LOCAL_DB_PATH=$(find .wrangler/state/v3/d1/miniflare-D1DatabaseObject -type f -name '*.sqlite' -print -quit) drizzle-kit generate",
+    "db:migrate:drop": "LOCAL_DB_PATH=$(find .wrangler/state/v3/d1/miniflare-D1DatabaseObject -type f -name '*.sqlite' -print -quit) drizzle-kit drop",
+    "db:migrate": "LOCAL_DB_PATH=$(find .wrangler/state/v3/d1/miniflare-D1DatabaseObject -type f -name '*.sqlite' -print -quit) drizzle-kit migrate",
     "cf-typegen": "wrangler types --env-interface CloudflareEnv env.d.ts"
   },
   "dependencies": {
+    "@auth/core": "^0.34.1",
+    "@auth/d1-adapter": "^1.4.1",
+    "@auth/drizzle-adapter": "^1.4.1",
     "chanfana": "^2.0.2",
+    "drizzle-orm": "^0.32.0",
     "hono": "^4.4.12",
+    "nanoid": "^5.0.7",
     "next": "14.1.0",
+    "next-auth": "5.0.0-beta.19",
+    "ramda": "^0.30.1",
     "react": "^18",
     "react-dom": "^18",
     "zod": "^3.23.8"
@@ -28,9 +38,12 @@
     "@cloudflare/next-on-pages": "1",
     "@cloudflare/workers-types": "^4.20240620.0",
     "@types/node": "^20",
+    "@types/ramda": "^0.30.1",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
+    "better-sqlite3": "^11.1.2",
+    "drizzle-kit": "^0.23.0",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
     "eslint-plugin-next-on-pages": "^1.12.0",
