--- a/package.json
+++ b/package.json
@@ -26,17 +26,21 @@
     "chanfana": "^2.0.2",
     "drizzle-orm": "^0.32.0",
     "hono": "^4.4.12",
+    "leaflet": "^1.9.4",
+    "leaflet-defaulticon-compatibility": "^0.1.2",
     "nanoid": "^5.0.7",
     "next": "14.1.0",
     "next-auth": "5.0.0-beta.19",
     "ramda": "^0.30.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-leaflet": "^4.2.1",
     "zod": "^3.23.8"
   },
   "devDependencies": {
     "@cloudflare/next-on-pages": "1",
     "@cloudflare/workers-types": "^4.20240620.0",
+    "@types/leaflet": "^1.9.12",
     "@types/node": "^20",
     "@types/ramda": "^0.30.1",
     "@types/react": "^18",
@@ -48,6 +52,7 @@
     "eslint-config-next": "14.1.0",
     "eslint-plugin-next-on-pages": "^1.12.0",
     "postcss": "^8",
+    "sass": "^1.77.8",
     "tailwindcss": "^3.3.0",
     "typescript": "^5",
     "vercel": "^34.3.0",
