--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "@auth/core": "^0.34.1",
     "@auth/d1-adapter": "^1.4.1",
     "@auth/drizzle-adapter": "^1.4.1",
+    "@heroicons/react": "^2.1.5",
     "chanfana": "^2.0.2",
+    "date-fns": "^3.6.0",
     "drizzle-orm": "^0.32.0",
     "hono": "^4.4.12",
     "leaflet": "^1.9.4",
@@ -40,6 +42,8 @@
   "devDependencies": {
     "@cloudflare/next-on-pages": "1",
     "@cloudflare/workers-types": "^4.20240620.0",
+    "@faker-js/faker": "^8.4.1",
+    "@types/better-sqlite3": "^7.6.11",
     "@types/leaflet": "^1.9.12",
     "@types/node": "^20",
     "@types/ramda": "^0.30.1",
@@ -47,7 +51,10 @@
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
     "better-sqlite3": "^11.1.2",
+    "chalk": "^5.3.0",
     "drizzle-kit": "^0.23.0",
+    "esbuild": "^0.23.0",
+    "esbuild-register": "^3.5.0",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
     "eslint-plugin-next-on-pages": "^1.12.0",
