--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "chanfana": "^2.0.2",
     "date-fns": "^3.6.0",
     "drizzle-orm": "^0.32.0",
+    "fast-xml-parser": "^4.4.0",
     "hono": "^4.4.12",
     "leaflet": "^1.9.4",
     "leaflet-defaulticon-compatibility": "^0.1.2",
