--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "db:migrate:gen": "LOCAL_DB_PATH=$(find .wrangler/state/v3/d1/miniflare-D1DatabaseObject -type f -name '*.sqlite' -print -quit) drizzle-kit generate",
     "db:migrate:drop": "LOCAL_DB_PATH=$(find .wrangler/state/v3/d1/miniflare-D1DatabaseObject -type f -name '*.sqlite' -print -quit) drizzle-kit drop",
     "db:migrate": "LOCAL_DB_PATH=$(find .wrangler/state/v3/d1/miniflare-D1DatabaseObject -type f -name '*.sqlite' -print -quit) drizzle-kit migrate",
-    "cf-typegen": "wrangler types --env-interface CloudflareEnv env.d.ts"
+    "cf-typegen": "wrangler types --env-interface CloudflareEnv env.d.ts",
+    "test": "vitest"
   },
   "dependencies": {
     "@auth/core": "^0.34.1",
@@ -45,12 +46,14 @@
     "@cloudflare/next-on-pages": "1",
     "@cloudflare/workers-types": "^4.20240620.0",
     "@faker-js/faker": "^8.4.1",
+    "@testing-library/react": "^16.0.0",
     "@types/better-sqlite3": "^7.6.11",
     "@types/leaflet": "^1.9.12",
     "@types/node": "^20",
     "@types/ramda": "^0.30.1",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.0.1",
     "better-sqlite3": "^11.1.2",
     "chalk": "^5.3.0",
@@ -60,11 +63,13 @@
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
     "eslint-plugin-next-on-pages": "^1.12.0",
+    "jsdom": "^24.1.1",
     "postcss": "^8",
     "sass": "^1.77.8",
     "tailwindcss": "^3.3.0",
     "typescript": "^5",
     "vercel": "^34.3.0",
+    "vitest": "^2.0.3",
     "wrangler": "^3.63.1"
   }
 }
