--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "jsdom": "^24.1.1",
     "postcss": "^8",
     "sass": "^1.77.8",
+    "tailwind-scrollbar": "^3.1.0",
     "tailwindcss": "^3.3.0",
     "typescript": "^5",
     "vercel": "^34.3.0",
