--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "nanoid": "^5.0.7",
     "next": "14.1.0",
     "next-auth": "5.0.0-beta.19",
+    "ngeohash": "^0.6.3",
     "ramda": "^0.30.1",
     "react": "^18",
     "react-dom": "^18",
@@ -50,6 +51,7 @@
     "@testing-library/react": "^16.0.0",
     "@types/better-sqlite3": "^7.6.11",
     "@types/leaflet": "^1.9.12",
+    "@types/ngeohash": "^0.6.8",
     "@types/node": "^20",
     "@types/ramda": "^0.30.1",
     "@types/react": "^18",
