Load spots when map moving
The spinner svg was from:
https://github.com/n3r4zzurr0/svg-spinners

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "date-fns": "^3.6.0",
     "drizzle-orm": "^0.32.0",
     "fast-xml-parser": "^4.4.0",
+    "framer-motion": "^11.3.19",
     "hono": "^4.4.12",
     "jotai": "^2.9.0",
     "leaflet": "^1.9.4",
@@ -48,6 +49,7 @@
     "@cloudflare/next-on-pages": "1",
     "@cloudflare/workers-types": "^4.20240620.0",
     "@faker-js/faker": "^8.4.1",
+    "@svgr/webpack": "^8.1.0",
     "@testing-library/react": "^16.0.0",
     "@types/better-sqlite3": "^7.6.11",
     "@types/leaflet": "^1.9.12",
