--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "jotai": "^2.9.0",
     "leaflet": "^1.9.4",
     "leaflet-defaulticon-compatibility": "^0.1.2",
+    "leaflet.markercluster": "^1.5.3",
     "nanoid": "^5.0.7",
     "next": "14.1.0",
     "next-auth": "5.0.0-beta.19",
@@ -43,6 +44,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-leaflet": "^4.2.1",
+    "react-leaflet-cluster": "^2.1.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
@@ -53,6 +55,7 @@
     "@testing-library/react": "^16.0.0",
     "@types/better-sqlite3": "^7.6.11",
     "@types/leaflet": "^1.9.12",
+    "@types/leaflet.markercluster": "^1.5.4",
     "@types/ngeohash": "^0.6.8",
     "@types/node": "^20",
     "@types/ramda": "^0.30.1",
