--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "@cloudflare/workers-types": "^4.20240620.0",
     "@faker-js/faker": "^8.4.1",
     "@svgr/webpack": "^8.1.0",
+    "@tailwindcss/forms": "^0.5.7",
     "@testing-library/react": "^16.0.0",
     "@types/better-sqlite3": "^7.6.11",
     "@types/leaflet": "^1.9.12",
