--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-dom": "^18",
     "react-leaflet": "^4.2.1",
     "react-leaflet-cluster": "^2.1.0",
+    "use-debounce": "^10.0.2",
     "zod": "^3.23.8"
   },
   "devDependencies": {
