--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@auth/drizzle-adapter": "^1.4.1",
     "@floating-ui/react": "^0.26.20",
     "@heroicons/react": "^2.1.5",
+    "@internationalized/date": "^3.5.5",
     "@next/bundle-analyzer": "^14.2.5",
     "@react-leaflet/core": "^2.1.0",
     "chanfana": "^2.0.2",
@@ -44,6 +45,7 @@
     "ngeohash": "^0.6.3",
     "ramda": "^0.30.1",
     "react": "^18",
+    "react-aria-components": "^1.3.1",
     "react-dom": "^18",
     "react-leaflet": "^4.2.1",
     "react-leaflet-cluster": "^2.1.0",
@@ -54,6 +56,7 @@
     "@cloudflare/next-on-pages": "1",
     "@cloudflare/workers-types": "^4.20240620.0",
     "@faker-js/faker": "^8.4.1",
+    "@react-aria/optimize-locales-plugin": "^1.1.1",
     "@svgr/webpack": "^8.1.0",
     "@tailwindcss/forms": "^0.5.7",
     "@testing-library/react": "^16.0.0",
