--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "framer-motion": "^11.3.19",
     "hono": "^4.4.12",
     "jotai": "^2.9.0",
+    "jotai-scope": "^0.7.1",
     "leaflet": "^1.9.4",
     "leaflet-defaulticon-compatibility": "^0.1.2",
     "leaflet.markercluster": "^1.5.3",
