--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
     "leaflet": "^1.9.4",
     "leaflet-defaulticon-compatibility": "^0.1.2",
     "leaflet.markercluster": "^1.5.3",
+    "linkify-react": "^4.1.3",
+    "linkifyjs": "^4.1.3",
     "nanoid": "^5.0.7",
     "next": "14.1.0",
     "next-auth": "5.0.0-beta.19",
