--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,12 @@ yarn-error.log*
 # vercel
 .vercel
 
+# directus
+/directus/secrets
+/directus/database
+/directus/uploads
+/directus/extensions
+
 # typescript
 *.tsbuildinfo
 next-env.d.ts
