Preliminary Facts page

--- a/.env.sample
+++ b/.env.sample
@@ -5,4 +5,6 @@ CLOUDFLARE_ACCOUNT_ID=4444
 CLOUDFLARE_DATABASE_ID=44444444-444444444-4444-444444444444
 CLOUDFLARE_D1_TOKEN=4444
 
+NEXT_PUBLIC_CMS_URL=http://localhost:8044
+
 # vim: filetype=sh
