Find solution for WYSIWYG editor HTML sanitize
- Tried DOMPurify (isomorphic-dompurify) and stumbled that nextjs
  hydration has error message `window` undefined or other errors.
  https://github.com/kkomelin/isomorphic-dompurify/issues/228

- Thus still use `dangerouslySetInnerHTML` and do sanitize on server
  side. This requires something like a directus hook extension:
  https://github.com/licitdev/directus-extension-sanitize-html

  There are some issues upstream, so I made my fork version and install
  it locally (not pushed online yet):

  - Manually build locally and copy `package.json` and `dist` folder to
    `directus/extensions/directus-extension-sanitize-html` volume.

  - The env variables must be sync with directus collection settings,
    current the collection (e.g., Facts) sanitizes ALL string fields.

- Memo some interface setting of WYSIWYG UI, I do this setting for every
  field, didn't find a way to reuse.

--- a/directus/docker-compose.yml
+++ b/directus/docker-compose.yml
@@ -18,6 +18,8 @@ services:
       # CORS_ENABLED: true
       # CORS_ORIGIN: true
       # PUBLIC_URL: /feeders-cms
+      EXT_SANITIZE_HTML_EVENT_SCOPES: "Facts.items.create,Facts.items.update"
+      EXT_SANITIZE_HTML_ALLOWED_TAGS: "p,a,b,i,em,strong,blockquote,div,span,hr,ol,ul,li,br,code,kbd"
     secrets:
       - secret
 
