--- a/package.json
+++ b/package.json
@@ -36,11 +36,13 @@
     "@react-leaflet/core": "^2.1.0",
     "chanfana": "^2.0.2",
     "change-case": "^5.4.4",
+    "css-select": "^5.1.0",
     "date-fns": "^3.6.0",
     "drizzle-orm": "^0.32.0",
     "fast-xml-parser": "^4.4.0",
     "framer-motion": "^11.3.19",
     "hono": "^4.4.12",
+    "html-react-parser": "^5.1.16",
     "jotai": "^2.9.0",
     "jotai-scope": "^0.7.1",
     "jsondiffpatch": "^0.6.0",
