Also find iframe in WYSIWYG and render differently
Will only use <iframe> as large block-level content (e.g., video or
interactive diagram).

Define custom format `.feeders-mce-iframe` to target such iframes
precisely. Note the format is applied to <p>, that is because TinyMCE
wraps iframe with <p>. We will extract them and render to top-level.

- Calculate aspect-ratio by width/height and set `style` attribute
  explicitly, to allow `height: auto` works.

- Add CSP FRAME_SRC variable to directus, otherwise they were blocked.

- Add `cms-restart` command to easier such extension-reload required
  development.

--- a/directus/docker-compose.yml
+++ b/directus/docker-compose.yml
@@ -25,6 +25,7 @@ services:
       # CORS_ENABLED: true
       # CORS_ORIGIN: true
       PUBLIC_URL: ${PUBLIC_URL}
+      CONTENT_SECURITY_POLICY_DIRECTIVES__FRAME_SRC: ${CSP__FRAME_SRC}
     secrets:
       - secret
       - s3_key
