Turn off eslint rule for next/no-img-element
It is not likely we use <img> by mistaken or overlooking.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,6 +3,9 @@
     "next/core-web-vitals",
     "plugin:eslint-plugin-next-on-pages/recommended"
   ],
+  "rules": {
+    "@next/next/no-img-element": "off"
+  },
   "plugins": [
     "eslint-plugin-next-on-pages"
   ]
