Add global env to quickly control accessing level
For example, set ACCESS_CTRL other than `open` to temporarily turn all
functions readonly.

--- a/.env.sample
+++ b/.env.sample
@@ -5,6 +5,9 @@ CLOUDFLARE_ACCOUNT_ID=4444
 CLOUDFLARE_DATABASE_ID=44444444-444444444-4444-444444444444
 CLOUDFLARE_D1_TOKEN=4444
 
+# open / readonly / close
+NEXT_PUBLIC_ACCESS_CTRL=open
+
 NEXT_PUBLIC_APP_URL=http://localhost:3000
 NEXT_PUBLIC_CMS_URL=http://localhost:8044
 NEXT_PUBLIC_R2_URL_PATH=https://feedersrc.example.com/
