Add env toggle to temporarily disable activation
Also modify User UserAgreement (wording mainly).

--- a/.env.sample
+++ b/.env.sample
@@ -8,6 +8,9 @@ CLOUDFLARE_D1_TOKEN=4444
 # open / readonly / close
 NEXT_PUBLIC_ACCESS_CTRL=open
 
+# on / off
+NEXT_PUBLIC_ENABLE_ACTIVATE=on
+
 NEXT_PUBLIC_APP_URL=http://localhost:3000
 NEXT_PUBLIC_CMS_URL=http://localhost:8044
 NEXT_PUBLIC_R2_URL_PATH=https://feedersrc.example.com/
