--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "start": "next start",
     "lint": "next lint",
     "tsc": "tsc --noErrorTruncation",
-    "pages:build": "pnpm next-on-pages",
-    "preview": "pnpm pages:build && wrangler pages dev",
+    "pages:build": "pnpm next-on-pages --outdir=dist",
+    "preview": "pnpm wrangler pages dev dist --port 3000",
     "deploy": "pnpm pages:build && wrangler pages deploy",
     "db:tables": "pnpm wrangler d1 execute feeders --command 'PRAGMA table_list'",
     "db:delete": "rm -rf .wrangler/state/v3/d1/miniflare-D1DatabaseObject drizzle",
