Remove trailing slash in R2_URL_PATH env
Give us more control when making string path like `${VAR}/xxx`.

Also add some comment description in env sample.

--- a/.env.sample
+++ b/.env.sample
@@ -1,10 +1,17 @@
+# Must sync with [vars] in wrangler.toml
 AUTH_TRUST_HOST=
+
+
+# Must sync in .dev.vars (for next-on-pages)
 AUTH_SECRET=4444
 AUTH_GOOGLE_ID=4444....apps.googleusercontent.com
 AUTH_GOOGLE_SECRET=4444
+
+
 CLOUDFLARE_ACCOUNT_ID=4444
 CLOUDFLARE_DATABASE_ID=44444444-444444444-4444-444444444444
 CLOUDFLARE_D1_TOKEN=4444
+
 
 # open / readonly / close
 NEXT_PUBLIC_ACCESS_CTRL=open
@@ -14,7 +21,7 @@ NEXT_PUBLIC_ENABLE_ACTIVATE=on
 
 NEXT_PUBLIC_APP_URL=http://localhost:3000
 NEXT_PUBLIC_CMS_URL=http://localhost:8044
-NEXT_PUBLIC_R2_URL_PATH=https://feedersrc.example.com/
+NEXT_PUBLIC_R2_URL_PATH=https://feedersrc.example.com
 NEXT_PUBLIC_CLOUDINARY_CLOUD=c44444444
 
 # vim: filetype=sh
