Build CMS data to static JSON
Edge runtime doesn't support static rendering, cloudflare next-on-pages
doesn't have full support of Cache (e.g., must use in custom domain), we
can't pre-build CMS fetching function and git rid of CMS after deploy.

Add manual build process, the goal is to never hit directus on
production.

--- a/.gitignore
+++ b/.gitignore
@@ -38,6 +38,7 @@ yarn-error.log*
 /directus/database
 /directus/uploads
 /directus/extensions
+/directus/build
 
 # typescript
 *.tsbuildinfo
@@ -48,4 +49,4 @@ next-env.d.ts
 .dev.vars
 
 # for personal
-scripts
+/scripts/
