--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "start": "next start",
     "lint": "next lint",
     "tsc": "tsc --noErrorTruncation",
-    "pages:build": "pnpm next-on-pages --outdir=dist",
+    "pages:build": "NEXT_PUBLIC_CMS_BUILD_KEY=$(cat directus/build/BUILD_KEY) pnpm next-on-pages --outdir=dist",
     "preview": "pnpm wrangler pages dev dist --port 3000",
     "deploy": "pnpm pages:build && wrangler pages deploy",
     "db:tables": "pnpm wrangler d1 execute feeders --command 'PRAGMA table_list'",
