--- a/.env.sample
+++ b/.env.sample
@@ -12,6 +12,7 @@ CLOUDFLARE_ACCOUNT_ID=4444
 CLOUDFLARE_DATABASE_ID=44444444-444444444-4444-444444444444
 CLOUDFLARE_D1_TOKEN=4444
 
+NEXT_PUBLIC_CONTACT_EMAIL=human@feeders.example.com
 
 # open / readonly / close
 NEXT_PUBLIC_ACCESS_CTRL=open
