--- a/wrangler.toml
+++ b/wrangler.toml
@@ -18,7 +18,7 @@ AUTH_TRUST_HOST=4
 binding = "DB"
 database_name = "feeders"
 database_id = "8dc8ae83-03b2-4c66-8259-4456facef8ce"
-migrations_dir = "db/migrations"
+migrations_dir = "drizzle"
 
 [[r2_buckets]]
 binding = "R2"
