--- a/.gitignore
+++ b/.gitignore
@@ -26,8 +26,9 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# local env files
-.env*.local
+# env files
+!.env.sample
+.env*
 
 # vercel
 .vercel
@@ -50,4 +51,4 @@ next-env.d.ts
 .dev.vars
 
 # for personal
-/scripts/
+/scripts/my/
