--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "lint": "next lint",
     "tsc": "tsc --noErrorTruncation",
     "pages:build": "NEXT_PUBLIC_CMS_BUILD_KEY=$(cat directus/build/BUILD_KEY) pnpm next-on-pages --outdir=dist",
+    "pages:build:prod": "NODE_ENV=production NEXT_PUBLIC_CMS_BUILD_KEY=$(cat directus/build/BUILD_KEY) pnpm next-on-pages --outdir=dist",
     "preview": "pnpm wrangler pages dev dist --port 3000",
-    "deploy": "pnpm pages:build && wrangler pages deploy",
+    "env:push:prod": "tsx scripts/push_env_as_secrets.mjs",
+    "deploy": "wrangler pages deploy",
     "db:tables": "pnpm wrangler d1 execute feeders --command 'PRAGMA table_list'",
     "db:delete": "rm -rf .wrangler/state/v3/d1/miniflare-D1DatabaseObject drizzle",
     "db:check": "LOCAL_DB_PATH=$(find .wrangler/state/v3/d1/miniflare-D1DatabaseObject -type f -name '*.sqlite' -print -quit) drizzle-kit check",
@@ -87,6 +89,7 @@
     "autoprefixer": "^10.0.1",
     "better-sqlite3": "^11.1.2",
     "chalk": "^5.3.0",
+    "dotenv": "^16.4.5",
     "drizzle-kit": "^0.23.0",
     "esbuild": "^0.23.0",
     "esbuild-register": "^3.5.0",
