Fixes for deployment
- Output has been changed to `./dist`.

- Remove duplicated `AUTH_` var in `wrangler.toml`.

--- a/.env.sample
+++ b/.env.sample
@@ -1,8 +1,5 @@
-# Must sync with [vars] in wrangler.toml
+# Must sync in .dev.vars or secrets (in CF dashbosrd) for next-on-pages
 AUTH_TRUST_HOST=
-
-
-# Must sync in .dev.vars (for next-on-pages)
 AUTH_SECRET=4444
 AUTH_GOOGLE_ID=4444....apps.googleusercontent.com
 AUTH_GOOGLE_SECRET=4444
