Make env:push task also support "preview" env
While no document, the `wrangler pages secret bulk` does support `--env`
to select production or preview environments.

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "pages:build": "NEXT_PUBLIC_CMS_BUILD_KEY=$(cat directus/build/BUILD_KEY) pnpm next-on-pages --outdir=dist",
     "pages:build:prod": "NODE_ENV=production NEXT_PUBLIC_CMS_BUILD_KEY=$(cat directus/build/BUILD_KEY) pnpm next-on-pages --outdir=dist",
     "preview": "pnpm wrangler pages dev dist --port 3000",
-    "env:push:prod": "tsx scripts/push_env_as_secrets.mjs",
+    "env:push:preview": "tsx scripts/push_env_as_secrets.mjs preview",
+    "env:push:prod": "tsx scripts/push_env_as_secrets.mjs production",
     "deploy": "wrangler pages deploy dist",
     "db:tables": "pnpm wrangler d1 execute feeders --command 'PRAGMA table_list'",
     "db:delete": "rm -rf .wrangler/state/v3/d1/miniflare-D1DatabaseObject drizzle",
