--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "@tailwindcss/forms": "^0.5.7",
     "@testing-library/react": "^16.0.0",
     "@types/better-sqlite3": "^7.6.11",
+    "@types/geojson": "^7946.0.14",
     "@types/leaflet": "^1.9.12",
     "@types/leaflet.markercluster": "^1.5.4",
     "@types/ngeohash": "^0.6.8",
