--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
     "nanoid": "^5.0.7",
     "next": "14.2.16",
     "next-auth": "5.0.0-beta.25",
-    "nextjs-toploader": "^3.7.15",
+    "next-nprogress-bar": "^2.3.15",
     "ngeohash": "^0.6.3",
     "ramda": "^0.30.1",
     "react": "^18",
