Add google site verification code to metadata
It's optional.

--- a/.env.sample
+++ b/.env.sample
@@ -21,5 +21,6 @@ NEXT_PUBLIC_APP_URL=http://localhost:3000
 NEXT_PUBLIC_CMS_URL=http://localhost:8044
 NEXT_PUBLIC_R2_URL_PATH=https://feedersrc.example.com
 NEXT_PUBLIC_CLOUDINARY_CLOUD=c44444444
+NEXT_PUBLIC_GOOGLE_SITE_VERIFY=
 
 # vim: filetype=sh
