--- a/.env.sample
+++ b/.env.sample
@@ -1,5 +1,5 @@
 # Must sync in .dev.vars or secrets (in CF dashbosrd) for next-on-pages
-AUTH_TRUST_HOST=
+AUTH_TRUST_HOST=4
 AUTH_SECRET=4444
 AUTH_GOOGLE_ID=4444....apps.googleusercontent.com
 AUTH_GOOGLE_SECRET=4444
