Add script to generate directus schema snapshot

--- a/directus/docker-compose.yml
+++ b/directus/docker-compose.yml
@@ -8,6 +8,7 @@ services:
       - ./database:/directus/database
       - ./uploads:/directus/uploads
       - ./extensions:/directus/extensions
+      - ./snapshots:/directus/snapshots
     environment:
       SECRET_FILE: /run/secrets/secret
       ADMIN_EMAIL: admin@feeders.com
