--- a/directus/docker-compose.yml
+++ b/directus/docker-compose.yml
@@ -10,8 +10,8 @@ services:
       - ./extensions:/directus/extensions
     environment:
       SECRET_FILE: /run/secrets/secret
-      # ADMIN_EMAIL: not-used@feeders.com
-      # ADMIN_PASSWORD: not-used
+      ADMIN_EMAIL: admin@feeders.com
+      ADMIN_PASSWORD: feedyourself
       DB_CLIENT: sqlite3
       DB_FILENAME: /directus/database/data.db
       WEBSOCKETS_ENABLED: true
