--- a/directus/extension-src/directus-extension-feeders-on-save-html/package.json
+++ b/directus/extension-src/directus-extension-feeders-on-save-html/package.json
@@ -26,6 +26,12 @@
 	"devDependencies": {
 		"@directus/extensions-sdk": "12.1.4",
 		"@types/node": "^22.10.2",
+		"@types/sanitize-html": "^2.13.0",
 		"typescript": "^5.7.2"
+	},
+	"dependencies": {
+		"css-select": "^5.1.0",
+		"htmlparser2": "^9.1.0",
+		"sanitize-html": "^2.14.0"
 	}
 }
