Polish package.json content of extensions
- Ensure description.

- Add `private` field.

--- a/directus/extension-src/directus-extension-feeders-endpoints/package.json
+++ b/directus/extension-src/directus-extension-feeders-endpoints/package.json
@@ -3,6 +3,7 @@
 	"description": "Custom endpoints for Feeders",
 	"icon": "extension",
 	"version": "1.0.0",
+  "private": true,
 	"keywords": [
 		"directus",
 		"directus-extension",
