--- a/.env.sample
+++ b/.env.sample
@@ -23,4 +23,6 @@ NEXT_PUBLIC_R2_URL_PATH=https://feedersrc.example.com
 NEXT_PUBLIC_CLOUDINARY_CLOUD=c44444444
 NEXT_PUBLIC_GOOGLE_SITE_VERIFY=
 
+CHARTS_REPO=
+
 # vim: filetype=sh
