--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
     "tsc": "tsc --noErrorTruncation",
     "pages:build": "NEXT_PUBLIC_CMS_BUILD_KEY=$(cat directus/build/BUILD_KEY) pnpm next-on-pages --outdir=dist",
     "pages:build:prod": "NODE_ENV=production NEXT_PUBLIC_CMS_BUILD_KEY=$(cat directus/build/BUILD_KEY) pnpm next-on-pages --outdir=dist",
+    "charts:pull": "tsx --env-file=.env.development scripts/pull_charts.mjs",
     "preview": "pnpm wrangler pages dev dist --port 3000",
     "env:push:preview": "tsx scripts/push_env_as_secrets.mjs preview",
     "env:push:prod": "tsx scripts/push_env_as_secrets.mjs production",
-    "deploy": "wrangler pages deploy dist",
+    "deploy": "tsx scripts/deploy.mjs",
     "db:tables": "pnpm wrangler d1 execute feeders --command 'PRAGMA table_list'",
     "db:delete": "rm -rf .wrangler/state/v3/d1/miniflare-D1DatabaseObject drizzle",
     "db:check": "LOCAL_DB_PATH=$(find .wrangler/state/v3/d1/miniflare-D1DatabaseObject -type f -name '*.sqlite' -print -quit) drizzle-kit check",
