--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "preview": "pnpm wrangler pages dev dist --port 3000",
     "env:push:preview": "tsx scripts/push_env_as_secrets.mjs preview",
     "env:push:prod": "tsx scripts/push_env_as_secrets.mjs production",
-    "deploy": "tsx scripts/deploy.mjs",
+    "deploy": "tsx --env-file=.env.development scripts/deploy.mjs",
     "db:tables": "pnpm wrangler d1 execute feeders --command 'PRAGMA table_list'",
     "db:delete": "rm -rf .wrangler/state/v3/d1/miniflare-D1DatabaseObject drizzle",
     "db:check": "LOCAL_DB_PATH=$(find .wrangler/state/v3/d1/miniflare-D1DatabaseObject -type f -name '*.sqlite' -print -quit) drizzle-kit check",
