--- a/.gitignore
+++ b/.gitignore
@@ -55,3 +55,10 @@ next-env.d.ts
 
 # for personal
 /scripts/my/
+
+# Playwright
+node_modules/
+/test-results/
+/playwright-report/
+/blob-report/
+/playwright/.cache/
