--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "@cloudflare/next-on-pages": "^1.13.6",
     "@cloudflare/workers-types": "^4.20240620.0",
     "@faker-js/faker": "^8.4.1",
+    "@playwright/test": "^1.50.1",
     "@react-aria/optimize-locales-plugin": "^1.1.1",
     "@svgr/webpack": "^8.1.0",
     "@tailwindcss/forms": "^0.5.7",
