Playwright config, run e2e test aside from vitest
- Configure playwright, mostly copy from feeders-charts repo.
  But use `.env.test` instead of `.env`, closer to vitest does.

- Set vitest dir to `src` to avoid it hit playwright's `tests` dir.

--- a/.env.sample
+++ b/.env.sample
@@ -23,6 +23,8 @@ NEXT_PUBLIC_R2_URL_PATH=https://feedersrc.example.com
 NEXT_PUBLIC_CLOUDINARY_CLOUD=c44444444
 NEXT_PUBLIC_GOOGLE_SITE_VERIFY=
 
+PORT=3000
+
 CHARTS_REPO=
 
 # vim: filetype=sh
