--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "cms-restart": "cd ./directus && docker compose stop && docker compose up --detach && docker logs feeders-directus -f",
     "cms:build-local": "tsx --env-file=.env.development directus/scripts/build_to_r2.mjs",
     "cms:snapshot": "cd ./directus && docker compose exec directus npx directus schema snapshot /directus/snapshots/$(date +'%Y%m%d').yml",
-    "test": "vitest"
+    "test": "vitest",
+    "e2e": "playwright test",
+    "e2e:shots": "playwright test --update-snapshots"
   },
   "dependencies": {
     "@auth/core": "^0.34.1",
