Change script names for running tests
Main test is E2E, so let `pnpm test` run e2e instead of unit test.

--- a/package.json
+++ b/package.json
@@ -29,9 +29,10 @@
     "cms-restart": "cd ./directus && docker compose stop && docker compose up --detach && docker logs feeders-directus -f",
     "cms:build-local": "tsx --env-file=.env.development directus/scripts/build_to_r2.mjs",
     "cms:snapshot": "cd ./directus && docker compose exec directus npx directus schema snapshot /directus/snapshots/$(date +'%Y%m%d').yml",
-    "test": "vitest",
-    "e2e": "playwright test",
-    "e2e:shots": "playwright test --update-snapshots"
+    "test:unit": "vitest",
+    "test:e2e": "playwright test",
+    "test:e2e:shots": "playwright test --update-snapshots",
+    "test": "pnpm run test:e2e"
   },
   "dependencies": {
     "@auth/core": "^0.34.1",
