--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@auth/core": "^0.34.1",
     "@auth/d1-adapter": "^1.4.1",
     "@auth/drizzle-adapter": "^1.4.1",
+    "@bprogress/next": "^3.2.4",
     "@date-fns/tz": "^1.2.0",
     "@directus/sdk": "^17.0.1",
     "@floating-ui/react": "^0.26.20",
@@ -65,7 +66,6 @@
     "nanoid": "^5.0.7",
     "next": "14.2.16",
     "next-auth": "5.0.0-beta.25",
-    "next-nprogress-bar": "^2.3.15",
     "ngeohash": "^0.6.3",
     "ramda": "^0.30.1",
     "react": "^18",
