Migrate cf-typegen for new wrangler version
Wrangler v4 changed `wrangler types` to include runtime types by
default, the generated `worker-configuration.d.ts` can replace our
existing `env.d.ts` (though we used to missing update this file anyway).

See info in first minor change in CHANGELOG:
https://github.com/cloudflare/workers-sdk/blob/main/packages/wrangler/CHANGELOG.md#400

- Update `cf-typegen` script to just run `wrangler types`, this is the
  default of newly generated wrangler (v4.2) project.

- Uninstall @cloudflare/workers-types per doc suggestion.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,12 +26,10 @@
       "@/*": [
         "./src/*"
       ]
-    },
-    "types": [
-      "@cloudflare/workers-types/2023-07-01"
-    ]
+    }
   },
   "include": [
+    "worker-configuration.d.ts",
     "next-env.d.ts",
     "feeders.d.ts",
     "**/*.ts",
