--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "db:migrate:gen": "LOCAL_DB_PATH=$(find .wrangler/state/v3/d1/miniflare-D1DatabaseObject -type f -name '*.sqlite' -print -quit) drizzle-kit generate",
     "db:migrate:drop": "LOCAL_DB_PATH=$(find .wrangler/state/v3/d1/miniflare-D1DatabaseObject -type f -name '*.sqlite' -print -quit) drizzle-kit drop",
     "db:migrate": "LOCAL_DB_PATH=$(find .wrangler/state/v3/d1/miniflare-D1DatabaseObject -type f -name '*.sqlite' -print -quit) drizzle-kit migrate",
-    "cf-typegen": "wrangler types --env-interface CloudflareEnv env.d.ts",
+    "cf-typegen": "wrangler types",
     "cms": "cd ./directus && docker compose up --detach",
     "cms-log": "docker logs feeders-directus -f",
     "cms-stop": "cd ./directus && docker compose stop",
@@ -79,7 +79,6 @@
   "devDependencies": {
     "@aws-sdk/client-s3": "^3.666.0",
     "@cloudflare/next-on-pages": "^1.13.6",
-    "@cloudflare/workers-types": "^4.20240620.0",
     "@faker-js/faker": "^8.4.1",
     "@playwright/test": "^1.50.1",
     "@react-aria/optimize-locales-plugin": "^1.1.1",
