--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "cms-stop": "cd ./directus && docker compose stop",
     "cms-restart": "cd ./directus && docker compose stop && docker compose up --detach && docker logs feeders-directus -f",
     "cms:build-local": "tsx --env-file=.env.development directus/scripts/build_to_r2.mjs",
+    "cms:upload": "tsx --env-file=.env.development directus/scripts/sync_to_r2.mjs",
     "cms:snapshot": "cd ./directus && docker compose exec directus npx directus schema snapshot /directus/snapshots/$(date +'%Y%m%d').yml",
     "test:unit": "vitest",
     "test:e2e": "playwright test",
@@ -80,6 +81,7 @@
     "@aws-sdk/client-s3": "^3.666.0",
     "@cloudflare/next-on-pages": "^1.13.10",
     "@faker-js/faker": "^8.4.1",
+    "@inquirer/confirm": "^5.1.9",
     "@playwright/test": "^1.50.1",
     "@react-aria/optimize-locales-plugin": "^1.1.1",
     "@svgr/webpack": "^8.1.0",
