--- a/directus/docker-compose.yml
+++ b/directus/docker-compose.yml
@@ -29,6 +29,7 @@ services:
       # CORS_ORIGIN: true
       PUBLIC_URL: ${PUBLIC_URL}
       CONTENT_SECURITY_POLICY_DIRECTIVES__FRAME_SRC: ${CSP__FRAME_SRC}
+      SESSION_COOKIE_TTL: 6d
     secrets:
       - secret
       - s3_key
