Serve directus /favicon.ico path by endpoints ext
Directus sometimes lose its favicon. The problem is that browser might
fetch `/favicon.ico` by default before the JS app can set specific icon
URL.

Thus we provide a static icon on the path, can reduce the problem.

Have to put a real icon image to `directus/favicon.ico` manually.

Upstream references:
https://github.com/directus/directus/issues/20414
https://github.com/directus/directus/discussions/20398

--- a/directus/docker-compose.yml
+++ b/directus/docker-compose.yml
@@ -11,6 +11,7 @@ services:
       - ./uploads:/directus/uploads
       - ./extensions:/directus/extensions
       - ./snapshots:/directus/snapshots
+      - ./favicon.ico:/directus/public/favicon.ico
     environment:
       SECRET_FILE: /run/secrets/secret
       ADMIN_EMAIL: admin@feeders.com
