Use getDb in NextAuth export
Follow previous commit, start to really use `getDb` instead of `db`.

- Change NextAuth to dynamic form.

- Change cf-typegen script according to opennextjs doc, this also
  changed output file name from `worker-configuration.d.ts` to
  `cloudflare-env.d.ts`.

--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "db:migrate:gen": "LOCAL_DB_PATH=$(find .wrangler/state/v3/d1/miniflare-D1DatabaseObject -type f -name '*.sqlite' -print -quit) drizzle-kit generate",
     "db:migrate:drop": "LOCAL_DB_PATH=$(find .wrangler/state/v3/d1/miniflare-D1DatabaseObject -type f -name '*.sqlite' -print -quit) drizzle-kit drop",
     "db:migrate": "LOCAL_DB_PATH=$(find .wrangler/state/v3/d1/miniflare-D1DatabaseObject -type f -name '*.sqlite' -print -quit) drizzle-kit migrate",
-    "cf-typegen": "wrangler types",
+    "cf-typegen": "wrangler types --env-interface CloudflareEnv cloudflare-env.d.ts",
     "cms": "cd ./directus && docker compose up --detach",
     "cms-log": "docker logs feeders-directus -f",
     "cms-stop": "cd ./directus && docker compose stop",
