--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,12 +1,10 @@
 {
   "extends": [
-    "next/core-web-vitals",
-    "plugin:eslint-plugin-next-on-pages/recommended"
+    "next/core-web-vitals"
   ],
   "rules": {
     "@next/next/no-img-element": "off"
   },
   "plugins": [
-    "eslint-plugin-next-on-pages"
   ]
 }
