--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "tsc": "tsc --noErrorTruncation",
     "pages:build": "NEXT_PUBLIC_CMS_BUILD_KEY=$(cat directus/build/BUILD_KEY) pnpm next-on-pages --outdir=dist",
     "pages:build:prod": "NODE_ENV=production NEXT_PUBLIC_CMS_BUILD_KEY=$(cat directus/build/BUILD_KEY) pnpm next-on-pages --outdir=dist",
+    "worker:build": "NEXT_PUBLIC_CMS_BUILD_KEY=$(cat directus/build/BUILD_KEY) pnpm opennextjs-cloudflare build",
     "pull:charts": "tsx --env-file=.env.development scripts/pull_charts.mjs",
-    "preview": "pnpm wrangler pages dev dist --port 3000",
+    "pages:preview": "pnpm wrangler pages dev dist --port 3000",
+    "preview": "opennextjs-cloudflare preview",
     "env:push:preview": "tsx scripts/push_env_as_secrets.mjs preview",
     "env:push:prod": "tsx scripts/push_env_as_secrets.mjs production",
     "deploy": "tsx --env-file=.env.development scripts/deploy.mjs",
