--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -17,6 +17,10 @@
     {
       "binding": "R2",
       "bucket_name": "feeders"
+    },
+    {
+      "binding": "NEXT_INC_CACHE_R2_BUCKET",
+      "bucket_name": "feeders-next-inc-cache"
     }
   ]
 }
