Update note comment in .env.sample
Some changes, but unable to be seen in this commit:

- Stop using `.dev.vars`.

  As doc said, do not use both `.dev.vars` and `.env` files. Because env
  files will be ignored when `.dev.vars` exist.
  https://developers.cloudflare.com/workers/configuration/environment-variables/#local-development-with-secrets

--- a/.env.sample
+++ b/.env.sample
@@ -1,4 +1,4 @@
-# Must sync in .dev.vars or secrets (in CF dashbosrd) for next-on-pages
+# Must sync with secrets (in CF dashbosrd) for worker
 AUTH_TRUST_HOST=4
 AUTH_SECRET=4444
 AUTH_GOOGLE_ID=4444....apps.googleusercontent.com
