Try enable observability for worker logs

--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -27,5 +27,9 @@
       "bucket_name": "feeders-next-inc-cache"
     }
   ],
-  "preview_urls": true
+  "preview_urls": true,
+  "observability": {
+    "enabled": true,
+    "head_sampling_rate": 1
+  }
 }
