Setup custom domain
For public access, use custom domain instead of generated
`*.workers.dev` one.

--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -27,6 +27,12 @@
       "bucket_name": "feeders-next-inc-cache"
     }
   ],
+  "routes": [
+    {
+      "pattern": "feeders.fyi",
+      "custom_domain": true
+    }
+  ],
   "preview_urls": true,
   "observability": {
     "enabled": true,
