--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -33,6 +33,7 @@
       "custom_domain": true
     }
   ],
+  "workers_dev": true,
   "preview_urls": true,
   "observability": {
     "enabled": true,
