--- a/package.json
+++ b/package.json
@@ -112,7 +112,7 @@
     "tailwindcss": "^3.4.9",
     "tsx": "^4.19.1",
     "typescript": "^5.5.4",
-    "vercel": "^34.4.0",
+    "vercel": "48.2.0",
     "vitest": "^2.0.5",
     "wrangler": "^4.40.2"
   },
