Change migrate scripts for custom migration name
To use `drizzle-kit generate --name=xxx` easier, change:

- Stop using `LOCAL_DB_PATH`, move the local sqlite finding logic into
  drizzle config. Find it automatically.

- The remove the `db:migrate:gen` script, because there is no quick way
  to bring `--name=xxx` argument to pnpm run script.

  Use `pnpm drizzle-kit generate --name=xxx` directly instead.

--- a/package.json
+++ b/package.json
@@ -16,10 +16,9 @@
     "deploy": "tsx --env-file=.env.development scripts/deploy.mjs",
     "db:tables": "pnpm wrangler d1 execute feeders --command 'PRAGMA table_list'",
     "db:delete": "rm -rf .wrangler/state/v3/d1/miniflare-D1DatabaseObject drizzle",
-    "db:check": "LOCAL_DB_PATH=$(find .wrangler/state/v3/d1/miniflare-D1DatabaseObject -type f -name '*.sqlite' -print -quit) drizzle-kit check",
-    "db:migrate:gen": "LOCAL_DB_PATH=$(find .wrangler/state/v3/d1/miniflare-D1DatabaseObject -type f -name '*.sqlite' -print -quit) drizzle-kit generate",
-    "db:migrate:drop": "LOCAL_DB_PATH=$(find .wrangler/state/v3/d1/miniflare-D1DatabaseObject -type f -name '*.sqlite' -print -quit) drizzle-kit drop",
-    "db:migrate": "LOCAL_DB_PATH=$(find .wrangler/state/v3/d1/miniflare-D1DatabaseObject -type f -name '*.sqlite' -print -quit) drizzle-kit migrate",
+    "db:check": "drizzle-kit check",
+    "db:migrate:drop": "drizzle-kit drop",
+    "db:migrate": "drizzle-kit migrate",
     "cf-typegen": "wrangler types --env-interface CloudflareEnv cloudflare-env.d.ts",
     "cms": "cd ./directus && docker compose up --detach",
     "cms-log": "docker logs feeders-directus -f",
