--- a/package.json
+++ b/package.json
@@ -49,7 +49,6 @@
     "css-select": "^5.1.0",
     "date-fns": "^3.6.0",
     "fast-xml-parser": "^4.4.1",
-    "framer-motion": "^11.3.24",
     "hono": "^4.5.4",
     "html-react-parser": "^5.1.16",
     "jotai": "^2.9.2",
@@ -60,6 +59,7 @@
     "leaflet.markercluster": "^1.5.3",
     "linkify-react": "^4.3.2",
     "linkifyjs": "^4.3.2",
+    "motion": "^12.23.24",
     "nanoid": "^5.0.7",
     "next": "14.2.16",
     "next-auth": "5.0.0-beta.25",
