Add API endpoint to revalidate cache
Provide a easier way to manually delete nextjs caches.

The route requires X-API-Key header with a secret, currently it should
only be kept by the maintainer.

--- a/.env.sample
+++ b/.env.sample
@@ -4,7 +4,6 @@ AUTH_SECRET=4444
 AUTH_GOOGLE_ID=4444....apps.googleusercontent.com
 AUTH_GOOGLE_SECRET=4444
 
-
 CLOUDFLARE_ACCOUNT_ID=4444
 CLOUDFLARE_DATABASE_ID=44444444-444444444-4444-444444444444
 CLOUDFLARE_D1_TOKEN=4444
@@ -22,6 +21,9 @@ NEXT_PUBLIC_CMS_URL=http://localhost:8044
 NEXT_PUBLIC_R2_URL_PATH=https://feedersrc.example.com
 NEXT_PUBLIC_CLOUDINARY_CLOUD=c44444444
 NEXT_PUBLIC_GOOGLE_SITE_VERIFY=
+
+API_URL=http://localhost:3000/api/
+ADMIN_API_SECRET=444444444444444444q44444444444444444444444
 
 PORT=3000
 
