Install superjson to serialize some types in cache
Known that nextjs `unstable_cache` doesn't preserve types like Date,
which can break our component expectation.

https://github.com/flightcontrolhq/superjson

--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "react-leaflet": "^4.2.1",
     "react-leaflet-cluster": "^2.1.0",
     "striptags": "4.0.0-alpha.4",
+    "superjson": "^2.2.3",
     "use-debounce": "^10.0.2",
     "zod": "^3.23.8"
   },
