--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -17,6 +17,13 @@
       "migrations_dir": "drizzle"
     }
   ],
+
+  "services": [
+    {
+      "binding": "WORKER_SELF_REFERENCE",
+      "service": "feeders",
+    },
+  ],
   "r2_buckets": [
     {
       "binding": "R2",
@@ -27,6 +34,33 @@
       "bucket_name": "feeders-next-inc-cache"
     }
   ],
+  "durable_objects": {
+    "bindings": [
+      {
+        "name": "NEXT_CACHE_DO_QUEUE",
+        "class_name": "DOQueueHandler",
+      },
+      {
+        "name": "NEXT_TAG_CACHE_DO_SHARDED",
+        "class_name": "DOShardedTagCache",
+      },
+      {
+        "name": "NEXT_CACHE_DO_PURGE",
+        "class_name": "BucketCachePurge",
+      },
+    ],
+  },
+  "migrations": [
+    {
+      "tag": "v1",
+      "new_sqlite_classes": [
+        "DOQueueHandler",
+        "DOShardedTagCache",
+        "BucketCachePurge",
+      ],
+    },
+  ],
+
   "routes": [
     {
       "pattern": "feeders.fyi",
