Set global_fetch_strictly_public compatibility
Without this, `revalidateByAPI()` won't work because the `fetch` in
worker can't reach the public endpoint.

See the Note about fetch:
https://developers.cloudflare.com/workers/runtime-apis/fetch/

The flag:
https://developers.cloudflare.com/workers/configuration/compatibility-flags/#global-fetch-strictly-public

--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -3,7 +3,8 @@
   "main": ".open-next/worker.js",
   "compatibility_date": "2025-09-15",
   "compatibility_flags": [
-    "nodejs_compat"
+    "nodejs_compat",
+    "global_fetch_strictly_public",
   ],
   "assets": {
     "directory": ".open-next/assets",
