--- a/directus/docker-compose.yml
+++ b/directus/docker-compose.yml
@@ -26,8 +26,8 @@ services:
       STORAGE_S3_BUCKET: feeders
       STORAGE_S3_REGION: apac
       STORAGE_S3_ENDPOINT_FILE: /run/secrets/s3_endpoint
-      # CORS_ENABLED: true
-      # CORS_ORIGIN: true
+      CORS_ENABLED: true
+      CORS_ORIGIN: ${CORS_ORIGIN}
       PUBLIC_URL: ${PUBLIC_URL}
       CONTENT_SECURITY_POLICY_DIRECTIVES__FRAME_SRC: ${CSP__FRAME_SRC}
       SESSION_COOKIE_TTL: 6d
