--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "react": "^18.3.1",
     "react-aria-components": "^1.3.1",
     "react-dom": "^18.3.1",
+    "react-error-boundary": "^6.0.0",
     "react-leaflet": "^4.2.1",
     "react-leaflet-cluster": "^2.1.0",
     "striptags": "4.0.0-alpha.4",
